--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,87 @@
     <string name="new_conversation">New Conversation</string>
     <string name="receiver_">Receiver:</string>
     <string name="received">Received</string>
+    <string name="failed">Failed</string>
+    <string name="pending">Pending</string>
+    <string name="unknown">Unknown</string>
+    <string name="you_">You: </string>
+    <string name="some_messages">%d messages</string>
+    <string name="some_days_ago">%d days ago</string>
+    <string name="some_hours_ago">%d hours ago</string>
+    <string name="some_mins_ago">%d mins ago</string>
+    <string name="just_now">Just now</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="type_messages">Type messages</string>
+    <string name="phone_type_mobile">Mobile</string>
+    <string name="phone_type_work">Work</string>
+    <string name="phone_type_home">Home</string>
+    <string name="phone_type_other">Other</string>
+    <string name="unread_messages">Unread Messages</string>
+    <string name="private_box">Private Box</string>
+    <string name="archived">Archived</string>
+    <string name="scheduled">Scheduled</string>
+    <string name="starred">Starred</string>
+    <string name="block_list">Block list</string>
+    <string name="backup_and_restore">Backup &amp; restore</string>
+    <string name="theme_mode">Theme mode</string>
+    <string name="swipe_actions">Swipe actions</string>
+    <string name="appearance">Appearance</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="invite_friends">Invite Friends</string>
+    <string name="rate_us">Rate Us</string>
+    <string name="new_badge_cap">NEW</string>
+    <string name="more_options_cap">MORE OPTIONS</string>
+    <string name="no_unread_messages">No unread messages</string>
+    <string name="no_private_messages">No private messages</string>
+    <string name="del">DEL</string>
+    <string name="enter_your_password">Enter Your Password</string>
+    <string name="enter_new_password">Enter New Password</string>
+    <string name="confirm_your_password">Confirm Your Password</string>
+    <string name="settings">Settings</string>
+    <string name="app_languages">App Languages</string>
+    <string name="display_cap">DISPLAY</string>
+    <string name="show_profile_photos">Show Profile Photos</string>
+    <string name="show_profile_photos_detail">Show profile photos and contacts info in list view</string>
+    <string name="assign_contact_photos">Assign Contact Photos</string>
+    <string name="assign_contact_photos_detail">Automatically assign a Picture to Contacts Without one</string>
+    <string name="notification_group">Notification Group</string>
+    <string name="notification_group_detail">Automatically group SMS notification together</string>
+    <string name="show_blocked_sms">Show Blocked SMS</string>
+    <string name="show_blocked_sms_detail">Show blocked SMS in conversation list</string>
+    <string name="show_messages">Show Messages</string>
+    <string name="show_messages_detail">Show messages on the lock screen and in the notification shade</string>
+    <string name="delivery_status">Delivery Status</string>
+    <string name="delivery_status_detail">Show delivery status for send messages</string>
+    <string name="delivery_sound">Delivery Sound</string>
+    <string name="delivery_sound_detail">Receive sound notification for delivered messages</string>
+    <string name="notification_previews">Notification Previews</string>
+    <string name="mms_messages_cap">MMS MESSAGES</string>
+    <string name="notifications_cap">NOTIFICATIONS</string>
+    <string name="send_long_messages_as_mms">Send Long Messages as MMS</string>
+    <string name="send_long_messages_as_mms_detail">If your longer text messages are failing to send, or sending in the wrong order, you can send them as MMS messages instead</string>
+    <string name="auto_compress_mms_attachments">Auto-compress MMS Attachments</string>
+    <string name="suggestion_in_chat">Suggestion in chat</string>
+    <string name="font_size">Font Size</string>
+    <string name="delete_old_messages_automatically">Delete Old Messages Automatically</string>
+    <string name="help_and_faq">Help and FAQ</string>
+    <string name="feedback">Feedback</string>
+    <string name="about_messages">About Messages</string>
+    <string name="normal">Normal</string>
+    <string name="never">Never</string>
+    <string name="actions_cap">ACTIONS</string>
+    <string name="show_notifications">Show Notifications</string>
+    <string name="show_notifications_detail">Tap to customize</string>
+    <string name="show_name_and_message">Show name &amp; message</string>
+    <string name="mark_read">Mark read</string>
+    <string name="reply">Reply</string>
+    <string name="none">None</string>
+    <string name="button_1">Button : 1</string>
+    <string name="button_2">Button : 2</string>
+    <string name="button_3">Button : 3</string>
+    <string name="popup_reply_cap">POPUP REPLY</string>
+    <string name="popup_reply">Popup Reply</string>
+    <string name="popup_reply_detail">Popup for new messages</string>
+    <string name="tap_to_dismiss">Tap to dismiss</string>
+    <string name="tap_to_dismiss_detail">Tap outside of the popup to close it</string>
 </resources>
